# bitnode_monitor

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  bitaxe_checker.py  bitnode_control.py  chart_writer.py  charts.py  config.py  datum_monitor.py  docker-compose.yml  eta_model.py  fulcrum_monitor.py  fulcrum_monitor.py.0  fulcrum_monitor.py.bak.20251201-183006  fulcrum_monitor.py.bak.20251201-204616  fulcrum_monitor.py.before-speed-fix.20251201-181115  fulcrum_monitor.py.before_stall_fix.20251201-193819  fulcrum_monitor.py.broken.20251201-173409  fulcrum_monitor.py.class_refactor.20251201-194911  fulcrum_monitor.py.identation  fulcrum_monitor.py.pre_telegram_split.20251201-202513  fulcrum_telegram_control.py  local.env.example  logger_util.py  monitor_controller.py  node_client.py  pyproject.toml  relay_telegram_client.py  requirements.txt  service_control.py  speed_history.py  speed_tracker.py  status_builder.py  status_builder.py.bak.20251201-211507  status_builder.py.pre_defaults.20251201-211827  system_helpers.py  system_info.py  (+6 more)
scripts/: check.py
